# fasthep-carpenter

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  existing-ci.yml
docs/: conf.py  index.md
src/fasthep_carpenter/: __init__.py  expressions.py  logo.py  main.py  protocols.py  settings.py  utils.py  workflow.py
src/fasthep_carpenter/backends/: __init__.py  _local.py
src/fasthep_carpenter/data_mapping/: __init__.py  array_methods.py
src/fasthep_carpenter/expressions/: ast.py  custom.py
src/fasthep_carpenter/stages/: __init__.py  data_source.py  define.py  external.py  histogram.py  invariantMass.py  output.py
src/fasthep_carpenter/testing/: __init__.py
tests/: conftest.py  test_expressions.py  test_package.py  test_utils.py  test_workflow.py
tests/data_mapping/: conftest.py  test_multi_tree_indexing.py
tests/expressions/: test_ast.py
tests/stages/: test_define.py
